# etruco

artefacts/: BacklogItems.ods  BacklogItems.xls  Padrao_de_codificacao.txt  padrao_codificacao.odt  product_backlog.ods  regras_truco.odt  requisitos.odt
artefacts/sprint1/: diagrama_classes.dia  regras_funcao  regras_truco.odt  requisitos vs funcoes  requisitos.odt
artefacts/sprint1/ferramentas_mantenedor/: ferramentas_mantenedor.tex
artefacts/sprint2/: diagrama.xmi  diagrama_classes.dia  mensagens.ods
artefacts/sprint3/: InterfaceClass.dia  diagrama da interface.dia  requisitos.odt
card_game/: Makefile.am  card_game.pc.in  configure.ac
card_game/src/: Card.h  Card_Game.cpp  Card_Game.h  Deck.cpp  Deck.h  Makefile.am  Rule.h  Team.cpp
discarga/: Doxyfile  Makefile.am  configure.ac  discarga.c.in  discarga.pc.in
discarga/src/: Action_Handler.cpp  Action_Handler.h  Card.h  Dealer.cpp  Dealer.h  Dealer_Rules.h  Deck.cpp  Deck.h  Makefile.am  Player.cpp  Player.h  Rule.h  Rule_Handler.cpp  Rule_Handler.h  Welcome.cpp  discarga.hpp
etruco/data/themes/default/: default.edc
etruco/data/themes/default/screen-initial/: i2e.sh  screen.edc
etruco/data/themes/default/screen-join/: i2e  screen.edc
etruco/data/themes/default/screen-waiting/: i2e  screen.edc
etruco/src/: ETruco.cpp  ETruco.h  Main.cpp
ipcpp/: Doxyfile  Makefile.am  configure.ac  ipcpp.c.in  ipcpp.pc.in
ipcpp/src/: Client.cpp  Client.h  Makefile.am  Messages_Handler.cpp  Messages_Handler.h  Server.cpp  Server.h
libcard_game/: Doxyfile  Makefile.am  configure.ac  libcard_game.pc.in
libcard_game/data/: default_rules.cpp
libcard_game/src/: Card_Game.cpp  Card_Game.h  Makefile.am  Player.cpp  Player.h  Rule.h  Team.h
libcardgame/: Makefile.am  configure.ac  libcardgame.c.in  libcardgame.pc.in
libcardgame/src/: Card.h  Card_Game.cpp  Card_Game.h  Deck.cpp  Deck.h  Makefile.am  Player.h  Rule.h  Team.h
libtruco/: Doxyfile  Makefile.am  configure.ac  libtruco.c.in  libtruco.pc.in
libtruco/data/: default_rules.cpp
libtruco/src/: Card.h  Deck.cpp  Deck.h  Deck_Baralho_Sujo.h  Makefile.am  Player.cpp  Player.h  Rule.cpp  Rule.h  Team.cpp  Team.h  Truco.cpp  Truco.h  default_rules.cpp  hello.cpp  main.cpp
libtruconet/src/: Message.h  Messages_Handler.cpp  Messages_Handler.h
tests/discarga/: test-card_game.cpp  testando.cpp  truco.xml
tests/ipcpp/: messages.xml  test-messages_handler.cpp  testando.cpp
tests/libcardgame/: test-deck.cpp  testando.cpp  truco.xml
tests/xml_parser/: teste-xml_parser.cpp
truco/src/: Game_Winner.cpp  Give_Cards.cpp  Play_Card.cpp  Truco_Paulista_Rules.h  pick_vira(2).cpp  play_card(3).cpp  round_winner(4).cpp  truco_paulista_rules.h
truco_paulista/src/: Give_Cards.cpp  Mao_Ferro.cpp  Mao_Onze.cpp  Mao_Winner.cpp  Pick_Vira.cpp  Round_Winner.cpp  Truco_Accepted.cpp  Truco_Paulista_Rules.h  Truco_Rejected.cpp  give_cards(1).cpp
xml_parser/: Doxyfile  Makefile.am  configure.ac  xml_parser.c.in  xml_parser.pc.in
xml_parser/src/: Makefile.am  XML_Parser.cpp  XML_Parser.h
