SUBDIRS=src

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = discarga.pc

EXTRA_DIST = \
	AUTHORS		\
	COPYING		\
	INSTALL		\
	NEWS		\
	README		\
	ChangeLog	\
	Doxyfile	\
	discarga.c.in	\
	discarga.pc.in	\
	doc/

MAINTAINERCLEANFILES = aclocal.m4 autom4te.cache/ config.guess config.h config.h.in	\
		config.log config.status config.sub depcomp install-sh libtool		\
		ltmain.sh missing stamp-h1
	
