SUBDIRS=src

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = xml_parser.pc

EXTRA_DIST = \
	AUTHORS		\
	COPYING		\
	INSTALL		\
	NEWS		\
	README		\
	ChangeLog	\
	Doxyfile	\
	xml_parser.c.in	\
	xml_parser.pc.in

MAINTAINERCLEANFILES = aclocal.m4 autom4te.cache/ config.guess config.h config.h.in	\
		config.log config.status config.sub depcomp install-sh libtool		\
		ltmain.sh missing stamp-h1
	
