lib_LTLIBRARIES=liblibtruco.la
liblibtruco_la_SOURCES= \
	Rule.cpp       \
	Team.cpp       \
	Player.cpp       \
	Truco.cpp       \
	Deck.cpp
liblibtruco_la_LDFLAGS=-version-info 0:0:0

libtruco_include_HEADERS= \
	Card.h           \
	Player.h           \
	Rule.h           \
	Team.h           \
	Truco.h           \
	Deck.h           \
	Deck_Baralho_Sujo.h

#bin_PROGRAMS=hello
#hello_SOURCES=main.cpp
#hello_LDADD=libhello.la
